# zuup

./: .coveragerc  .gitreview  HACKING.rst  README.rst  openstack-common.conf  releases.sh  requirements.txt  setup.cfg  test-requirements.txt
doc/source/: conf.py  index.rst  usage.rst
zuup/: __init__.py
zuup/tests/: test_zuup.py
