[metadata]
name = zuup
summary = Command line to consult Openstack zuul status
description-file =
    README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
home-page = https://github.com/sileht/zuup
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    zuup = zuup:main
[files]
packages =
    zuup

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = zuup/locale
domain = zuup

[update_catalog]
domain = zuup
output_dir = zuup/locale
input_file = zuup/locale/zuup.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zuup/locale/zuup.pot

[wheel]
universal = 1
